--- a/src/views/style2.scss
+++ b/src/views/style2.scss
@@ -20,7 +20,7 @@
             
         }
     .main-card{
-        max-width: 650px !important;
+        max-width: 660px !important;
         z-index: 9999;
         margin-top: 4rem;
        
@@ -38,36 +38,12 @@
                 margin: 1rem 0;
             }
         }
-        form{
-           
-            h3{
-                font-size: var(--font-size-3);
-                margin:2rem 0 1.5rem 0;
-            }
-            .input-group{
-                height: 3.5rem;
-                
-
-                input{
-                    height: 100%;
-                    font-size: var(--font-size);
-                    color: var(--ligt-text);
-                    font-weight: 500;
-                    border-radius: .1rem 0 0 .1rem !important;
-                }
-                 button{
-                    height: 100%;
-                    font-size: var(--font-size-3);
-                    border-radius: 0 .2rem .2rem 0 !important;
-                 }
- 
-            }
-        }
+        
     }
 }
 
 .Onde-assistir{
-   
+   overflow: hidden;
 
     .content{
 
@@ -81,17 +57,19 @@
         }
     }
     .video-content{
-
+    
     img{
         object-fit: cover;
         width: 100%;
         height: 100%;
+
     }
     video{
-      
+     
       position: absolute;
-      width: 32.1rem;
-      left: 13.5%;top: 20%;
+      width: 28rem;
+      left: 16%;top: 21%;
+   
       z-index: -1;
 
         
@@ -125,7 +103,7 @@
     .second-image{
         position: absolute;
         width: 25rem;
-        top: 72%;right: 18%;
+        top: 72%;left: 18%;
         background: #000;
         border: .30rem solid #222 !important;
         border-radius: .5rem;
@@ -204,4 +182,32 @@
         }
    
    }
+}
+.questions{
+        h1{
+            font-size: var(--font-size-1);
+           margin-bottom: 3rem;
+        }
+
+}
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 5rem !important;
+
+    h6,h5{
+        color: var(--light-text);
+
+       
+    }
+    
+    ul li{
+        margin:.7rem 0;
+    a{
+        color: var(--light-text);
+        font-size: .9rem;
+        
+    }
+}
 }
