--- a/src/views/style2.scss
+++ b/src/views/style2.scss
@@ -56,24 +56,14 @@
             line-height: 1.5;
         }
     }
-    .video-content{
-    
-    img{
+    .video-content video{  
+        
         object-fit: cover;
         width: 100%;
         height: 100%;
-
-    }
-    video{
      
-      position: absolute;
-      width: 28rem;
-      left: 16%;top: 21%;
-   
-      z-index: -1;
-
         
-    }
+    
 }
 }
 .download{
@@ -103,7 +93,8 @@
     .second-image{
         position: absolute;
         width: 25rem;
-        top: 72%;left: 18%;
+        top: 72%;left:50%;
+        transform: translateX(-50%);
         background: #000;
         border: .30rem solid #222 !important;
         border-radius: .5rem;
@@ -194,7 +185,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem 5rem !important;
+  
 
     h6,h5{
         color: var(--light-text);
