--- a/src/App.scss
+++ b/src/App.scss
@@ -19,10 +19,10 @@
     box-sizing: border-box;
     text-decoration: none;border: none !important;
     outline: none;
-    transition: all .3s linear;
+    transition: all .2s ease;
     box-shadow: none !important;
   
-    color: var(--white);
+    color: var(--white) !important;
 }
 @mixin grid($val) {
     display: grid;
@@ -39,6 +39,9 @@
     &:hover{
        background-color: var(--primary-hover) !important;
     }
+ }
+ h1{
+     font-weight:bold !important;
  }
  body{
     background: #000;
